--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B-Grade Sami</title>
-    <link rel="icon" href="/image.png">
+    <title>Property Builders</title>
+    <link rel="icon" href="
+    <svg
+      width="32"
+      height="32"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="black"
+      strokeWidth="1.5"
+      strokeLinecap="round"
+      strokeLinejoin="round"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path d="M3 10L12 3L21 10V21H3V10Z" />
+      <path d="M9 21V14H15V21" />
+      <path d="M12 3V8" />
+    </svg>
+    ">
   </head>
 
   <body>
